    but that never did this. These declarations have been removed. If 
    your code tries to catch these exceptions you might need to remove
    those catch clauses to avoid compile errors. (Daniel Naber)

 2. FuzzyQuery now takes an additional parameter that specifies the
    minimum similarity that is required for a term to match the query.
    Note that this isn't supported by QueryParser yet. (Daniel Naber)
  
 3. The Russian and the German analyzers have been moved to Sandbox.
    Also, the WordlistLoader class has been moved one level up in the
    hierarchy and is now org.apache.lucene.analysis.WordlistLoader
    (Daniel Naber)
    
 4. Fixed a bug in IndexWriter.addIndexes(IndexReader[] readers) that
    prevented deletion of obsolete segments. (Christoph Goller)
     
 5. Disk usage (peak requirements during indexing and optimization)
    in case of compound file format has been improved. 
    (Bernhard, Dmitry, and Christoph)

 6. Added javadocs-internal to build.xml - bug #30360
    (Paul Elschot via Otis)

 7. Several methods and fields have been deprecated. The API documentation 
    contains information about the recommended replacements. It is planned
    that the deprecated methods and fields will be removed in Lucene 2.0.
    (Daniel Naber)

 8. A new class DateTools has been added. It allows you to format dates
    in a readable format adequate for indexing. Unlike the existing
    DateField class DateTools can cope with dates before 1970 and it
    forces you to specify the desired date resolution (e.g. month, day,
    second, ...) which can make RangeQuerys on those fields more efficient.
    (Daniel Naber)

1.4.1

 1. Fixed a performance bug in hit sorting code, where values were not
    correctly cached.  (Aviran via cutting)

 2. Fixed errors in file format documentation. (Daniel Naber)


1.4 final

 1. Added "an" to the list of stop words in StopAnalyzer, to complement
    the existing "a" there.  Fix for bug 28960